--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@ngrx/store": "^13.2.0",
     "@ngrx/store-devtools": "^13.2.0",
     "bootstrap": "^5.1.3",
+    "lodash-es": "^4.17.21",
+    "lodash.merge": "^4.6.2",
+    "ngrx-store-localstorage": "^13.0.1",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -31,6 +34,8 @@
     "@angular/cli": "~13.3.5",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
+    "@types/lodash-es": "^4.17.6",
+    "@types/lodash.merge": "^4.6.7",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
