--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build — prod"
   },
   "private": true,
   "dependencies": {
@@ -21,16 +22,19 @@
     "@ngrx/store": "^13.2.0",
     "@ngrx/store-devtools": "^13.2.0",
     "bootstrap": "^5.1.3",
+    "express": "^4.18.1",
     "lodash-es": "^4.17.21",
     "ngx-bootstrap": "^8.0.0",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@angular/cli": "^13.3.5",
+    "@angular/compiler-cli": "~13.3.0",
+    "typescript": "~4.6.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.5",
-    "@angular/cli": "^13.3.5",
-    "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^12.11.1",
@@ -39,7 +43,10 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "karma-jasmine-html-reporter": "~1.7.0"
+  },
+  "engines": {
+    "node": "14.17.0",
+    "npm": "7.16.0"
   }
 }
