--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.5",
+    "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^12.11.1",
@@ -44,7 +45,9 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0"
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "ng-packagr": "^13.0.0",
+    "typescript": "~4.6.2"
   },
   "engines": {
     "node": "14.17.0",
