--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,12 @@
     "strictPropertyInitialization": false,
     "target": "es2017",
     "module": "es2020",
+    "paths": {
+      "table": [
+        "dist/table/table",
+        "dist/table"
+      ]
+    },
     "lib": [
       "es2020",
       "dom"
